--- a/FlightInstrument_Net48/FlightInstrument_Net48.csproj
+++ b/FlightInstrument_Net48/FlightInstrument_Net48.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>FlightInstrument_Net48</RootNamespace>
     <AssemblyName>FlightInstrument_Net48</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -20,6 +20,7 @@
     <PackageTags>flight;controls;custom-controls</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Ghazanfar373</PackageProjectUrl>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
