--- a/TestCases/TestCases.csproj
+++ b/TestCases/TestCases.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -37,8 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FlightInstrument_Net48">
-      <HintPath>..\FlightInstrument_Net48\bin\Release\FlightInstrument_Net48.dll</HintPath>
+    <Reference Include="HUD_Claude, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\FlightInstrument_Net48\bin\Release\HUD_Claude.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
